--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/kit": "^1.27.4",
     "@types/cookie": "^0.5.1",
     "autoprefixer": "^10.4.14",
+    "phosphor-svelte": "^1.3.0",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "svelte": "^5.0.0-next.1",
@@ -26,6 +27,7 @@
   },
   "type": "module",
   "dependencies": {
+    "ai": "^2.2.27",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.1.0",
     "tailwind-variants": "^0.1.18"
