--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
+    "@melt-ui/pp": "^0.1.4",
+    "@melt-ui/svelte": "^0.65.0",
     "@neoconfetti/svelte": "^1.0.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.27.4",
@@ -20,6 +22,7 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^3.6.0",
+    "svelte-sequential-preprocessor": "^2.0.1",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
