--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@melt-ui/svelte": "^0.65.0",
     "@neoconfetti/svelte": "^1.0.0",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-vercel": "^3.1.0",
     "@sveltejs/kit": "^1.27.4",
     "@types/cookie": "^0.5.1",
     "autoprefixer": "^10.4.14",
